--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Default ignored files
 /shelf/
 /.idea/workspace.xml
+node_modules
+package-lock.json
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
