--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "format": "prettier --write .",
+    "lint": "eslint . ",
+    "lint:fix": "eslint . --fix "
   },
   "keywords": [],
   "author": "K",
@@ -19,14 +22,17 @@
   },
   "homepage": "https://github.com/Unicornelia/node-project#readme",
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3"
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "ejs": "^3.1.10"
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
   }
 }
