--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "mongodb": "^6.13.0"
   }
 }
