--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /shelf/
 /.idea/workspace.xml
 node_modules
-package-lock.json
+server/package-lock.json
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
