--- a/server/package.json
+++ b/server/package.json
@@ -36,11 +36,12 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongodb": "^6.13.0",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5",
-    "mongodb": "^6.13.0"
+    "sequelize": "^6.37.5"
   }
 }
