--- a/server/package.json
+++ b/server/package.json
@@ -41,7 +41,6 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
-    "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "mongoose": "^8.10.1"
   }
 }
