--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongodb": "^6.13.0",
+    "connect-mongodb-session": "^5.0.0",
     "mongoose": "^8.10.1"
   }
 }
