feat: add bcrypt and hash passwords before saving to DB

--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
