--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
