--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "nodemailer": "^6.10.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1"
   }
