--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "eslint": "^9.21.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "react-router-dom": "^7.1.5"
   }
 }
