--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "nodemailer": "^6.10.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "stripe": "^17.7.0"
   }
 }
