--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
-    "build": "cd client && npm install && npm run build",
-    "format": "prettier --write .",
-    "lint": "eslint . ",
-    "lint:fix": "eslint . --fix "
+    "start": "tsc && ts-node ./dist/server.js",
+    "build": "tsc --w",
+    "dev": "nodemon ./dist/server.js --exec babel-node -e js",
+    "format": "node_modules/.bin/prettier --write .",
+    "lint": "node_modules/.bin/eslint . ",
+    "lint:fix": "node_modules/.bin/eslint . --fix "
   },
   "keywords": [],
   "author": "K",
@@ -27,13 +28,26 @@
   "homepage": "https://github.com/Unicornelia/node-project#readme",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/connect-flash": "^0.0.40",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
+    "@types/csurf": "^1.11.5",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.15",
+    "@types/nodemailer": "^6.4.17",
+    "@typescript-eslint/parser": "^8.29.0",
     "cookie-parser": "^1.4.7",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -48,10 +62,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
-    "nodemailer": "^6.10.0",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
+    "nodemailer": "^6.10.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "stripe": "^17.7.0"
   }
 }
