--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && ts-node ./dist/server.js",
     "build": "tsc --w",
-    "dev": "nodemon ./dist/server.js --exec babel-node -e js",
+    "dev": "nodemon ./dist/server.js --exec ts-babel-node -e js",
     "format": "node_modules/.bin/prettier --write .",
     "lint": "node_modules/.bin/eslint . ",
     "lint:fix": "node_modules/.bin/eslint . --fix "
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/connect-flash": "^0.0.40",
+    "@types/connect-mongodb-session": "^2.4.7",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/csurf": "^1.11.5",
@@ -50,6 +51,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "babel-node": "^0.0.1-security",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
@@ -66,6 +68,7 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "stripe": "^17.7.0"
+    "stripe": "^17.7.0",
+    "ts-babel-node": "^1.1.1"
   }
 }
