--- a/server/package.json
+++ b/server/package.json
@@ -51,14 +51,16 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-node": "^0.0.1-security",
+    "babel-preset-env": "^0.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
+    "csurf": "^1.2.2",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
