--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "typescript-eslint": "^8.31.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,7 +27,7 @@
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "test": "jest",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": [
